# idpmodem

./: .gitignore  .project  LICENSE  Pipfile  README.md  README.rst  crcxmodem.py  idplorademo.py  idpmodem.py  idpmodemsample.py  idpwindows.py  pyproject.toml  requirements.txt  ser_at_test.py  serialportfinder.py  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
examples/: basic_tracking.py  idp_hello_world.py  idpmodemsample.py  low_power.py  pnpdevkit.py  pnpdongle.py  snr_logger.py  st2100_beta.py  st2100_beta2.py  st2100_demo.py
idpmodem/: __init__.py  at_protocol.py  atcommand_async.py  atcommand_thread.py  aterror.py  constants.py  crcxmodem.py  headless.py  idpcodec.py  idpmessage.py  idpmodem.py  idpmodem_old.py  idpmodemsample.py  message.py  nmea.py  pnpdongle.py  protocol_factory.py  s_registers.py  twin.py  utils.py
idpmodem/codecs/: common.py
idpmodem/tests/: context.py  idpmodemsample.py  test_idpmodem_basic.py
lora/: globalsattracker.py  idplorademo.py  loramts.py
tempdoc/: index.html  index.rst
tests/: context.py  idpwindows.py  manual_at_test.py  manual_test_idpmodem_async_old.py  manual_test_idpmodem_thread.py  manual_test_utils.py  serialportfinder.py  test_codec_common.py  test_idpmodem_async.py  test_idpmodem_basic.py  test_nmea.py  test_pnpdongle.py  test_utils.py
tests/simulator/: socat_idp_sim.py
(+1 files in other folders)
